--- a/resources/templates/make.html
+++ b/resources/templates/make.html
@@ -1,75 +1,32 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
-    <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{name}}-make recipe</title>
-	<link rel="icon" href="data:,">
-	<link rel="stylesheet" href="/assets/css/recipe.css" type="text/css" media="screen" />
-	<style>
-	 .button{
-	     @apply w-full border-gray-300 rounded-lg shadow-sm focus:border-accent focus:ring-accent;
-	 }
-	 .footer{
-	     @apply sticky bottom-0;
-	 }
-	 /* class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 pl-5 border-2 border-black" */
-	</style>
-    </head>
-    <body class="flex flex-col sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
-	<header class="flex flex-row justify-between px-4 py-2 bg-secondery">
-	    <span class="font-amiri text-lg">أطباق سُهيل</span>
-	    <div class="block rounded-full sm:mx-0 sm:shrink-0">
-		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chef-hat"><path d="M6 13.87A4 4 0 0 1 7.41 6a5.11 5.11 0 0 1 1.05-1.54 5 5 0 0 1 7.08 0A5.11 5.11 0 0 1 16.59 6 4 4 0 0 1 18 13.87V21H6Z"/><line x1="6" x2="18" y1="17" y2="17"/></svg>
-	    </div>
-	</header>
-	<main id="app" class="grow flex">
-	    <div class="carousel-container w-full basis-full relative overflow-hidden">
-		<div class="carousel-slide h-full flex" data-type="carousel-slide">
-		    {% for recipe in recipes %}
-		    <div class="shrink-0 bg-cover bg-center w-full pt-[50%]"
-			 style="background-image:url('/assets/img/{{recipe.img}}');"
-			 data-type="img">
-			<div class="bg-gradient-to-b from-transparent via-10% via-black/60 to-black h-full px-4 py-8">
-			    <span class="text-white px-10 pt-24 block">
-				{{recipe.description}}
-			    </span>
-			</div>
-		    </div>
-		    {% endfor %}
-		    <div class="shrink-0 bg-cover bg-center w-full pt-[50%]"
-			 style="background-image:url('/assets/img/food.jpg');"
-			 data-type="img">
-			<div class="bg-gradient-to-b from-transparent via-10% via-black/60 to-black h-full px-4 py-8">
-			    <!-- https://pixabay.com/illustrations/food-sambal-dish-egg-stir-fried-7382109/ -->
-			    <span class="text-white px-10 pt-24 block"
-				  style="font-family: apple color emoji, segoe ui emoji, noto color emoji, android emoji, emojisymbols, emojione mozilla, twemoji mozilla, segoe ui symbol;">
-				صحة وهنا <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-salad inline"><path d="M7 21h10"/><path d="M12 21a9 9 0 0 0 9-9H3a9 9 0 0 0 9 9Z"/><path d="M11.38 12a2.4 2.4 0 0 1-.4-4.77 2.4 2.4 0 0 1 3.2-2.77 2.4 2.4 0 0 1 3.47-.63 2.4 2.4 0 0 1 3.37 3.37 2.4 2.4 0 0 1-1.1 3.7 2.51 2.51 0 0 1 .03 1.1"/><path d="m13 12 4-4"/><path d="M10.9 7.25A3.99 3.99 0 0 0 4 10c0 .73.2 1.41.54 2"/></svg>
-				<br/>
-				بحب اسمع رايكم
-			    </span>
-			</div>
-		    </div>
-		</div>
-		<button id="prevBtn" class="absolute right-2 top-1/2 -translate-y-1/2 bg-white/50 h-20">
-		    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg>
-		</button>
-		<button id="nextBtn" autofocus
-			class="absolute left-2 top-1/2 -translate-y-1/2 bg-white/50 h-20">
-		    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
-		</button>
-	    </div>
-
-
-	</main>
-	<div class="bg-yellow-200"> Salam Sailor</div>
-	<footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
-	    سليم خطيب
-	</footer>
-	<script id="data" type="application/javascript">
-	    {{recipes|json|safe}}
-	</script>
-	<script type="text/javascript" src="/assets/js/recipe.js" async-attr defer-attr></script>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sign up</title>
+    <link rel="icon" href="data:,">
+    <link rel="stylesheet" href="/assets/css/make.css" type="text/css" media="screen" />
+</head>
+<body>
+    <!-- <div class="sr-only">
+	 <label for="media-file">حمل صورة</label>
+	 <input name="media" id="media-file" type="file" accept="image/jpeg,image/png"  />
+	 <label for="desc">شرح عن الوصفة</label>
+	 <input id="desc" name="description" type="text"/>
+	 <button id="btn">انشرها</button>
+	 </div> -->
+    <div id="app"></div>
+    <svg>
+	<symbol id="plus" viewBox="0 0 24 24">
+	    <line x1="12" x2="12" y1="5" y2="19"/>
+	    <line x1="5" x2="19" y1="12" y2="12"/>
+	</symbol>
+    </svg>
+    <script id="data" type="application/json">
+     {{recipe-id|json|safe}}
+    </script>
+    
+    <script src="/assets/js/make.js"></script>
+</body>
 </html>
